Added Controller and Mustache Templates
The functionality is extremely low

--- a/src/main/resources/templates/kuichi.mustache
+++ b/src/main/resources/templates/kuichi.mustache
@@ -2,4 +2,14 @@
 
 <h1>{{title}}</h1>
 
+<div class="client-info">
+    <h1>Clients in the system</h1>
+    {{#clients}}
+    <section>
+    <p><strong>Full name:</strong>
+        <a href="/client/{{login}}"> {{name}} {{surname}}</p>
+    </section>
+    {{/clients}}
+</div>
+
 {{> footer}}
